Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24956

ALTER TABLE not replicated with Galera in MariaDB 10.5.9

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.5.9
    • 10.4.19, 10.5.10
    • Galera
    • Debian Buster (LXC containers in Ubuntu 20.10), MariaDB from official repo (10.5.9+maria~buster)

    Description

      After upgrading 3-node cluster from 10.5.8 to 10.5.9, I noticed that ALTER TABLE statements are not replicated. Change is visible only on initiator. No log message anywhere.

      Later when I try to write a row in that table, other node fails:

      2021-02-23 15:17:33 2 [ERROR] Slave SQL: Column 57 of table 'xx.xx' cannot be converted from type 'tinyint' to type 'enum('unknown','ok','warning','slow','response_tim', Internal MariaDB error code: 1677
       
      ...
       
      2021-02-23 15:17:33 2 [ERROR] WSREP: Inconsistency detected: Inconsistent by consensus on 654e4dc9-1f74-11eb-9dab-7e7fcd43b6b6:20437917
               at /home/buildbot/buildbot/build/galera/src/replicator_smm.cpp:process_apply_error():1347
      

      I tried many different ALTER TABLE statements, without success. For example, CREATE TABLE works. All DML commands are also ok.

      After downgrading back to 10.5.8, everything works.

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              pstast Petr Šťastný
              Votes:
              2 Vote for this issue
              Watchers:
              10 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: