MDEV-24956: ALTER TABLE not replicated with Galera in MariaDB 10.5.9

`WSREP_CLIENT` is used as condition for starting ALTER/OPTIMIZE/REPAIR TOI.
Using this condition async replicated affected DDL's will not be replicated.
Fixed by removing this condition.